# HLA-TAPAS

./: .gitignore  pyproject.toml
SNP2HLA/: SNP2HLA.py  __main__.py
hla_tapas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
